force-app/main/default/objects/tc9_util__Purchase_Order__c/tc9_util__Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>