force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Alert_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Alert_Threshold_Met__c</fullName>
    <formula>AND(
    NOT(ISBLANK(tc9_util__Current_Spend__c)), 
    tc9_util__Remaining_Spend_Percentage__c &lt;= tc9_util__First_Alert__c
)</formula>
    <label>Alert Threshold Met</label>
    <type>Checkbox</type>
</CustomField>