force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Current_Spend__c</fullName>
    <label>Current Spend</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>