force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Deactivate__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate</label>
    <type>Checkbox</type>
</CustomField>