force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>