force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__First_Alert__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__First_Alert__c</fullName>
    <defaultValue>(0.25)</defaultValue>
    <inlineHelpText>The “FIRST ALERT” is reached when the REMAINING SPEND falls BELOW this threshold percentage amount. For example, if the PO is 100 units and the FIRST ALERT warning is 25%. If the remaining balance goes from 40 to 20, it will fall below the 25% threshold and flag.</inlineHelpText>
    <label>First Alert</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>