force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Last_Warning__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Last_Warning__c</fullName>
    <defaultValue>(0.15)</defaultValue>
    <inlineHelpText>The “LAST WARNING” is reached when the REMAINING SPEND falls BELOW this percentage threshold amount.  For example, if the PO is 100 units and the LAST WARNING is 10%. If the remaining balance balance falls from say 12% to 8%, it will cross the 10% threshold and flag.</inlineHelpText>
    <label>Last Warning</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>