force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__PO_Remarks__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__PO_Remarks__c</fullName>
    <description>PO long description, remarks, comments, notes</description>
    <inlineHelpText>Please enter any important or salient information, remarks, comments, notes</inlineHelpText>
    <label>PO Remarks</label>
    <type>TextArea</type>
</CustomField>