force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOW (Purchase Order)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_util__Purchase_Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SOW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_util__Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>