force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Purchase_Order_Depletion_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Purchase_Order_Depletion_Rule__c</fullName>
    <defaultValue>&quot;Overspend&quot;</defaultValue>
    <label>Purchase Order Depletion Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_util__Purchase_Order_Depletion_Rule</valueSetName>
    </valueSet>
</CustomField>