force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Purchase_Order_Number__c</fullName>
    <inlineHelpText>This is the Purchase Order number that will be applied to the Pay Transactions.</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>