force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Remaining_Spend_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Remaining_Spend_Percentage__c</fullName>
    <formula>tc9_util__Remaining_Spend__c / tc9_util__Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Spend Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>