force-app/main/default/objects/tc9_util__Purchase_Order__c/fields/tc9_util__Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Value__c</fullName>
    <inlineHelpText>The Total Value of the Purchase Order that can be allocated.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>