force-app/main/default/objects/tc9_util__Purchase_Order__c/recordTypes/tc9_util__Milestone.recordType-meta.xml
<RecordType>
    <fullName>tc9_util__Milestone</fullName>
    <active>true</active>
    <label>Milestone</label>
</RecordType>