force-app/main/default/objects/tc9_util__Purchase_Order__c/recordTypes/tc9_util__Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>tc9_util__Purchase_Order</fullName>
    <active>true</active>
    <label>Purchase Order</label>
</RecordType>