force-app/main/default/objects/tc9_util__Purchase_Order__c/recordTypes/tc9_util__SOW.recordType-meta.xml
<RecordType>
    <fullName>tc9_util__SOW</fullName>
    <active>true</active>
    <label>SOW</label>
</RecordType>