force-app/main/default/objects/tc9_util__Purchase_Order__c/validationRules/tc9_util__Warning_or_Alert_above_100.validationRule-meta.xml
<ValidationRule>
    <fullName>tc9_util__Warning_or_Alert_above_100</fullName>
    <active>true</active>
    <description>Ensures a user does not set the Warning or Alert percent values above 100.</description>
    <errorConditionFormula>OR(
tc9_util__Last_Warning__c  &gt; 100,
tc9_util__First_Alert__c &gt; 100
)</errorConditionFormula>
    <errorMessage>Warning or Alert can only be a maximum of 100%.</errorMessage>
</ValidationRule>